feat: Add social account login

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,92 +1,135 @@
+{% load i18n %}
 {% load static %}
 <!DOCTYPE html>
-<html lang="de">
+<html>
 <head>
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Core{% endblock %}</title>
     <link href="{% static 'core/css/output.css' %}" rel="stylesheet" type="text/css">
-    {% block head %}{% endblock %}
+    <meta http-equiv="refresh" content="10">
+    <title>
+        {% block head_title %}
+        {% endblock head_title %}
+    </title>
+    {% block extra_head %}
+    {% endblock extra_head %}
 </head>
 <body>
-<div class="drawer break-words hyphens-auto">
-    <input id="drawer" type="checkbox" class="drawer-toggle" />
-    <div class="drawer-content flex flex-col">
-        <!-- Navbar -->
-        <div class="navbar w-full bg-neutral rounded-box" data-theme="dark">
-            <div class="flex-none lg:hidden">
-                <label for="drawer" class="btn btn-square btn-ghost">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                         class="inline-block w-6 h-6 stroke-current">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                              d="M4 6h16M4 12h16M4 18h16"></path>
-                    </svg>
-                </label>
-            </div>
-            <div class="flex-1 px-2 mx-2">
-                {% block home_logo %}
-                    <a href="{% url 'home_view' %}" class="text-lg font-bold align-middle">
-                        DaisyUI
-                    </a>
-                {% endblock %}
-            </div>
-            <div class="flex-none hidden lg:block z-10">
-                <ul class="menu menu-horizontal">
-                    {% block navbar_links %}
-                        <li><a>Item 1</a></li>
-                        <li tabindex="0">
-                            <details>
-                                <summary>Parent</summary>
-                                <ul class="p-2">
-                                    <li><a>Submenu 1</a></li>
-                                    <li><a>Submenu 2</a></li>
-                                </ul>
-                            </details>
-                        </li>
-                        <li><a>Item 3</a></li>
+{% block body %}
+    {% if messages %}
+        <div class="toast">
+            {% for message in messages %}
+                <div class="alert alert-info">
+                    <span>{{ message }}</span>
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
+
+    <div class="navbar bg-base-100 shadow-sm">
+        <div class="flex">
+            <a href="{% url 'home_view' %}" class="btn btn-ghost">
+                <div class="avatar">
+                    <div class="w-10 rounded">
+                        <img src="{% static 'wishlist/images/logo.png' %}" />
+                    </div>
+                </div>
+                <p class="m-auto">
+                    Wunschliste
+                    {% block home_logo_extra %}
                     {% endblock %}
-                </ul>
+                </p>
+            </a>
+        </div>
+        <div class="flex-1">
+            <div class="w-full flex justify-end px-2">
+                    <div class="dropdown">
+                        <div tabindex="0" role="button" class="btn btn-outline m-1">Wunschlisten</div>
+                        <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm">
+                            <li>
+                                <a href="{% url 'reservationListView' %}">Meine Reservierungen</a>
+                            </li>
+                            {% for user in all_users %}
+                                <li>
+                                    <a href="{% url 'wishList' user.id %}">
+                                        {{ user.username }}
+                                    </a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
             </div>
+        </div>
+        <div class="flex gap-2">
 
             <div class="dropdown dropdown-end">
                 {% block account_picture %}
-                    <label tabindex="0" class="btn btn-ghost btn-circle avatar">
+                    <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
                         <div class="w-10 rounded-full">
-                            <img src="https://placeimg.com/80/80/people" />
+                            <img
+                                    alt="Tailwind CSS Navbar component"
+                                    src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
                         </div>
-                    </label>
-                {% endblock %}
+                    </div>
+                {% endblock account_picture %}
+
                 <ul tabindex="0"
-                    class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 text-base-content rounded-box w-52">
-                    {% block account_dropdown_list %}
-                        <li>
-                            <a href="{% url 'password_change' %}">Passwort ändern</a>
-                        </li>
-                        <li>
-                            <a href="{% url 'logout' %}">{{ user.username }} abmelden</a>
-                        </li>
-                    {% endblock %}
+                    class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                    {% if user.is_authenticated %}
+                        {% url 'account_email' as email_url_ %}
+                        {% if email_url_ %}
+                            <li>
+                                <a href="{{ email_url_ }}">{% trans "Change Email" %}</a>
+                            </li>
+                        {% endif %}
+                        {% url 'account_change_password' as change_password_url_ %}
+                        {% if change_password_url_ %}
+                            <li>
+                                <a href="{{ change_password_url_ }}">{% trans "Change Password" %}</a>
+                            </li>
+                        {% endif %}
+                        {% url 'socialaccount_connections' as connections_url_ %}
+                        {% if connections_url_ %}
+                            <li>
+                                <a href="{{ connections_url_ }}">{% trans "Account Connections" %}</a>
+                            </li>
+                        {% endif %}
+                        {% url 'mfa_index' as mfa_url_ %}
+                        {% if mfa_url_ %}
+                            <li>
+                                <a href="{{ mfa_url_ }}">{% trans "Two-Factor Authentication" %}</a>
+                            </li>
+                        {% endif %}
+                        {% url 'usersessions_list' as usersessions_list_url_ %}
+                        {% if usersessions_list_url_ %}
+                            <li>
+                                <a href="{{ usersessions_list_url_ }}">{% trans "Sessions" %}</a>
+                            </li>
+                        {% endif %}
+                        {% url 'account_logout' as logout_url_ %}
+                        {% if logout_url_ %}
+                            <li>
+                                <a href="{{ logout_url_ }}">{% trans "Sign Out" %}</a>
+                            </li>
+                        {% endif %}
+                    {% else %}
+                        {% url 'account_login' as login_url_ %}
+                        {% if login_url_ %}
+                            <li>
+                                <a href="{{ login_url_ }}">{% trans "Sign In" %}</a>
+                            </li>
+                        {% endif %}
+                    {% endif %}
                 </ul>
             </div>
         </div>
-        <!-- Page content here -->
-        <main class="p-4 w-full break-words hyphens-auto">
-            {% block content %}
-                Content
-            {% endblock %}
-        </main>
     </div>
-    <div class="drawer-side">
-        <label for="drawer" class="drawer-overlay"></label>
-        <ul class="menu p-4 w-80 min-h-full bg-base-200">
-            {% block sidebar_links %}
-                <li><a>Sidebar Item 1</a></li>
-                <li><a>Sidebar Item 2</a></li>
-            {% endblock %}
 
-        </ul>
+    {% block content-base %}
+    {% endblock content-base %}
+{% endblock body %}
 
-    </div>
-</div>
+{% block extra_body %}
+{% endblock extra_body %}
+
 </body>
 </html>
