--- a/wishlist/templates/wishlist/wish_list.html
+++ b/wishlist/templates/wishlist/wish_list.html
@@ -8,7 +8,7 @@
     von {{ list_owner }}
 {% endblock %}
 
-{% block navbar_extra %}
+{% block navbar_extra2 %}
     <li>
         <a href="{% url 'createWish' list_owner.id %}" class="hidden sm:flex">
             Neuen Wunsch hinzufügen
