fix: Add missing closing tag to email template

--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -53,6 +53,7 @@
         <button type="submit" name="action_remove" class="btn btn-error">
             {% trans 'Remove' %}
         </button>
+	</form>
     {% else %}
         {% include "account/snippets/warn_no_email.html" %}
     {% endif %}
